Fixed alignment of dashboard icons under mobile

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/home/home.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/apps/home/home.less
@@ -44,7 +44,7 @@
     .dashboard-item {
       text-align: center;
       display: inline-block;
-      margin: 0 20px;
+      margin: 15px;
       cursor: pointer;
       font-family: "Open Sans", sans-serif;
       font-size: 14px;
@@ -58,10 +58,6 @@
 
       &:hover {
         opacity: 0.7;
-      }
-
-      &:first-child {
-        margin-left: 10px;
       }
     }
   }
